# bazel-pandoc-docx

./: CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  internal_deps.bzl
.bcr/: metadata.template.json  source.template.json
.github/workflows/: release.yml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  defaults.yaml  hello.md  reference.docx
pandoc_docx/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
pandoc_docx/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
pandoc_docx/tests/: versions_test.bzl
