# Override http_archive for local testing
local_repository(
    name = "com_wgtwo_rules_pandoc_docx",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_pandoc_docx setup #
######################
# Fetches the rules_pandoc_docx dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_wgtwo_rules_pandoc_docx//pandoc_docx:repositories.bzl", "rules_pandoc_docx_dependencies")

rules_pandoc_docx_dependencies()
